integration_tests/codegen_fail/fail/interface/non_subtype_return.stderr
error[E0080]: evaluation of constant value failed
 --> fail/interface/non_subtype_return.rs:9:1
  |
9 | #[graphql_interface(for = ObjA)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the evaluated program panicked at 'Failed to implement interface `Character` on `ObjA`: Field `id`: implementor is expected to return a subtype of interface's return object: `[String!]!` is not a subtype of `String!`.', $DIR/fail/interface/non_subtype_return.rs:9:1
  |
  = note: this error originates in the macro `$crate::panic::panic_2015` (in Nightly builds, run with -Z macro-backtrace for more info)
